--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
       "react-app/jest"
     ]
   },
+  
   "browserslist": {
+    
     "production": [
       ">0.2%",
       "not dead",
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
